fix(datepicker): remove wrong width for small-device
affects: @fremtind/jkl-datepicker

--- a/packages/datepicker/datepicker.scss
+++ b/packages/datepicker/datepicker.scss
@@ -348,8 +348,6 @@ $icon-size--compact: $font-size-2;
     }
 
     @include small-device {
-        width: $calendar-width + ($calendar-padding--compact * 2);
-
         &__calendar {
             padding: $calendar-padding $calendar-padding--compact;
         }
